# push_swap

./: ..gitignore.un~  .gitignore  CMakeLists.txt  Makefile  README.md  checker  checker.c  main.c  push_swap  test.py  test_push_swap.sh
checker.dSYM/Contents/Resources/DWARF/: checker
general/includes/: checker.h  push_swap.h
general/libft/: .Makefile.un~  Makefile  Makefile~  author
general/libft/includes/: libft.h  macro.h
general/libft/srcs/: ft_atoi.c  ft_error.c  ft_get_next_line.c  ft_isascii.c  ft_isdigit.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_memalloc.c  ft_memchr.c  ft_memdel.c  ft_memmove.c  ft_putendl.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_quicksort.c  ft_strchrn.c  ft_strequ.c  ft_striter.c  ft_strjoin.c  ft_strjoin_free.c  ft_strnew.c  ft_strnstr.c  ft_strrev.c  ft_strsplit.c  ft_strsub.c  ft_strsub_free.c  ft_strtrimn.c  ft_tolower.c  get_next_line.c
general/libftprintf/: Makefile  author  main.c
general/libftprintf/includes/: color_util.h  convert.h  exp_util.h  flags_parse.h  float_util.h  ft_ldtoa.h  ft_printf.h  ft_putwchar.h  get_digit.h  get_float.h  get_float_part.h  get_int_part.h  libft.h  long_arithmetic.h  precision_parser.h  print_basic.h  print_char.h  print_d_buf.h  print_digit_buf.h  print_e_buf.h  print_f_buf.h  print_float.h  print_hex.h  print_hex_buf.h  print_oct.h  print_other.h  print_sd_buf.h  print_settings.h  print_str.h  print_ud.h  print_util.h  print_ws.h  printf_constants.h  round_float.h  size_parser.h  spec_format_parser.h  spec_util.h  special_float_values.h  specificator.h  type_func_table.h  (+3 more)
general/libftprintf/srcs/: color_util.c  exp_util.c  flags_parser.c  float_util.c  ft_atoi.c  ft_bubblesort.c  ft_bzero.c  ft_error.c  ft_exit.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_ldtoa.c  ft_lltoa_base.c  ft_lst_pb.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_pow.c  (+84 more)
general/srcs/: Commands.c  Commands2.c  Commands3.c  a.out  checker.c  chunks.c  commands.c  commands2.c  commands3.c  dynamicArray.c  dynamic_array.c  ft_strsplit.c  get_commands.c  how_rotate.c  how_rotate2.c  init.c  main.c  pushSwap.c  push_swap.c  reading.c  service.c  service2.c  service_ps.c  service_ps2.c  sort_all.c  sort_five.c  sort_two_and_three.c  stack.c  stack2.c
temporary/: Makefile
